--- a/constraint-validation.html
+++ b/constraint-validation.html
@@ -75,7 +75,7 @@
 
         <div class="form-group">
           <label for="doge">How much DogeCoin u donate me?</label>
-          <input type="number" id="doge" min=20>
+          <input type="number" id="doge" min="20">
         </div>
 
         <div class="form-group">
