--- a/contact-me.html
+++ b/contact-me.html
@@ -2,9 +2,110 @@
 <html>
   <head>
     <title>Contact Me</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="contact-me.css" />
   </head>
 
   <body>
-    <!-- TODO -->
+    <div class="container">
+      <h1>Connect With Us</h1>
+      <form id="connect-form" action="">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            id="name"
+            class="form-control validate-input"
+            type="text"
+            name="name"
+            min="3"
+            required
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            id="email"
+            class="form-control validate-input"
+            type="email"
+            name="email"
+            required
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="reason">Reason for contacting</label>
+          <select class="form-control" name="reason" id="contact-reason">
+            <option value="choose" selected="selected" disabled>
+              Choose one
+            </option>
+            <option value="job-opportunity">Job opportunity</option>
+            <option value="talk-code">Talk Code</option>
+          </select>
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group job-group hide-group">
+          <label for="job-title">Job Title</label>
+          <input
+            id="job-title"
+            class="form-control validate-input"
+            type="text"
+            name="job-title"
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+        
+        <div class="form-group job-group hide-group">
+          <label for="company-website">Company Website</label>
+          <input
+            id="company-website"
+            class="form-control validate-input"
+            type="url"
+            name="company-website"
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group talk-group hide-group">
+          <label for="coding-language">Coding Language</label>
+          <select class="form-control" name="reason" id="coding-language">
+            <option value="choose" selected="selected" disabled>
+              Choose one
+            </option>
+            <option value="html">HTML</option>
+            <option value="css">CSS</option>
+            <option value="javascript">JavaScript</option>
+          </select>
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <label for="message">Message</label>
+          <input
+            id="message"
+            class="form-control validate-input"
+            type="textarea"
+            name="message"
+            min="10"
+            required
+          />
+          <small class="error" aria-live="polite"></small>
+        </div>
+
+        <div class="form-group">
+          <input class="btn btn-primary" type="submit" value="Send" />
+        </div>
+      </form>
+    </div>
+
+    <script src="contact-me.js"></script>
   </body>
 </html>
+
